# llm_competition_2025_bridge_code

./: .gitignore  CLAUDE.md  README.md  example_prompt.md  main.py  pyproject.toml  ray_on_slurm.sh  request_openai_api.py  run_nccl_test.sh
team_p02_honda/: .gitignore  Dockerfile  Makefile  README.md  build-win.bat  docker-compose-windows.yml  docker-compose.yml  pyproject.toml  up-win.bat
team_p02_honda/.devcontainer/: devcontainer.json
team_p02_honda/data/dna/: .gitignore  README.md
team_p02_honda/data/dna/chocoa/: DNA_vanilla_benign.py  DNA_vanilla_benign_openrouter.py  wildjailbreak_vanilla_benign.py
team_p02_honda/data/dna/dpo/: safe_unsafe_ver3_part0.py
team_p02_honda/data/dna/kuriyu/: ab_v2_answer_check.py  ab_v2_cot.py  ab_v2_process.py  ad_v2_id.py
team_p02_honda/data/dna/matsugi/: .gitattributes
team_p02_honda/data/dna/matsugi/dpo/: README.md  merged_train_part_00.jsonl  safe_unsafe_ver3_part0.py  safe_unsafe_ver3_part0.slurm
team_p02_honda/data/dna/matsugi/stats/: README.md  classfiy_scripts_sft.py  classified_adversarial_vanilla_train.head.jsonl  classified_wj_ah_train.jsonl  dna_hierarchy.json  requirements.txt
team_p02_honda/data/dna/matsugi/tools/: convert_json.py  json_check.py  jsonl2json.py  requirements.txt
team_p02_honda/data/dna/mumumu/v1/: data_processing.py  sft_vanilla_harmful.py  submit.py
team_p02_honda/data/dna/mumumu/v2/: choose.py  data_processing.py  make_cot.py  submit.py
team_p02_honda/data/dna/yudai/: .gitignore  README.md  add_think_tags.py  classify_script.py  dna_dpo_v2_generator.py  upload_to_hf.py
team_p02_honda/data/hle/: README.md
team_p02_honda/data/hle/sft/: .gitignore  README.md  README_ja.md  difficulty_scorer.py  generateFromSeed.py  keys.json.example  length_selector.py  merge_datasets.py  run_filter.sh  run_label_filter.sh  run_length_selector.sh  run_upload_data.sh  upload_data.py
team_p02_honda/data/hle/sft/MixtureOfThoughts/: README.md  README_ja.md  process_mot_dataset.py
team_p02_honda/data/hle/sft/OlymMATH/: 1_evaluate_cot.py  2_regenerate_cot.py  add_data_hf.py  neko_llm_push.py  remove_id_hf.py  rename_id_hf.py
team_p02_honda/data/hle/sft/OpenMath/: OpenMathReasoningFiltering.py  OpenMathReasoningFiltering_bylabel.py  OpenMathReasoningFiltering_colab.ipynb  README.md  README_ja.md
team_p02_honda/data/hle/sft/OpenThoughts-114k/: OpenThoughts-114k_filtering.ipynb  OpenThoughts-114k_fix_fmt.ipynb
team_p02_honda/data/hle/sft/dataset-config/: sft.ver.1.0.yml  sft.ver.2.0.yml  sft.ver.3.0.yml
team_p02_honda/data/hle/sft/dataset-refactor/: HLE_SFT_OlympiadBench_Fix.py  HLE_SFT_PHYBench.jsonl  HLE_SFT_PHYBench.py  hle_sft_olympiadbench_fix.jsonl
team_p02_honda/data/hle/sft/evaluate_cot/: 1_evaluate_cot.py  2_regenerate_cot.py  README.md
team_p02_honda/data/hle/sft/evaluate_cot_async/: README.md  README_en.md  __init__.py  run_eval.sh  (+5 more)
team_p02_honda/evaluation/dna/: .gitignore  README.md  eval.py  infer.py  utils.py
team_p02_honda/evaluation/dna/do_not_answer/: dna.slurm
team_p02_honda/evaluation/hle/: .gitignore  README.md  eval.py  infer.py  upload_eval_result.py
team_p02_honda/inference/: README.md  client_example.py  utils.py  vllm_sbatch.sh  vllm_start.sh
team_p02_honda/inference/merge_lora/: .gitignore  README.md  main.py  run.sh
team_p02_honda/training/: README.md  create_ms-swift_env.sh  create_open-r1_env.sh  create_open-r1_env2.sh
team_p02_honda/training/commands/: download.sh  dpo-qwen3-14b-3node.sh  dpo-qwen3-14b.sh  dpo-qwen3-235b-a22.sh  dpo-qwen3-32b-3node.sh  dpo-qwen3-32b.sh  dpo-qwen3-4b-node3.sh  dpo-qwen3-4b.sh  grpo-qwen-1.5b-colocate-node3.sh  grpo-qwen-1.5b-colocate-node3_copy.sh  grpo-qwen-1.5b-node1.sh  grpo-qwen-1.5b-node3.sh  grpo-qwen-235b-colocate-node3.sh  grpo-qwen-32b-node3 copy 2.sh  grpo-qwen-32b-node3 copy.sh  grpo-qwen-32b-node3.sh  orpo-qwen3-235b-a22-3node.sh  sft-qwen-0.5b.sh  sft-qwen-235b-main.sh  sft-qwen-235b-ms.sh  sft-qwen-235b-muon.sh  sft-qwen-235b.sh  sft-qwen-235b2.sh  sft-qwen-30b-node1.sh  sft-qwen-30b.sh  sft-qwen-32b-3node.sh  sft-qwen-32b-dna.sh  sft-qwen-32b-hle.sh  sft-qwen-32b-lora.sh  sft-r1-lora.sh  warmup_unsloth.sh
team_p02_honda/training/commands/export/: export_Qwen3-30b-A3B.sh
team_p02_honda/training/commands/ms-swift/: sft-qwen-235b-ms.sh  sft-qwen-30b-ms-node1.sh  sft-qwen-4b-ms-gpu1.sh
team_p02_honda/training/configs/data_configs/: dna_ver1_0.yaml  example.yaml  example_yuki_dpo.yaml  hle_ver1_0.yaml  sft_ver3_0.yaml
team_p02_honda/training/open-r1/: setup.py
team_p02_honda/training/open-r1/src/: .deepspeed_env
team_p02_honda/training/to_bf16/: dequantize.py  fp8_to_bf16.py
team_p02_honda/training/tutorials/: sft-0.5b.sh
team_p02_honda/tutorials/: README.md  job_single_node.sh  run_inference.py
team_p04_watanabe/src/filtering/: PLAN.md  pyproject.toml
team_p04_watanabe/src/filtering/configs/: biomed1.yaml  biomed2.yaml  biomed3.yaml  math1.yaml  math3.yaml  math5.yaml  physics1.yaml  social1.yaml
team_p04_watanabe/src/filtering/filter_solvable_unsolvable/: README.md  requirements.txt
team_p04_watanabe/src/filtering/upload_data_to_huggingface/: README.md
(+681 files in other folders)
