[project]
name = "llm-bridge-sahara"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "openai>=1.97.1",
    "datasets>=2.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pyarrow>=12.0.0",
    "pillow>=10.0.0",
    "jupyter>=1.0.0",
    "transformers>=4.30.0",
    "torch==2.2.2",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "tqdm>=4.64.0",
    "kaggle>=1.5.12",
]
