[project]
name = "llm2025compet"
version = "0.1.0"
description = "Matsuo-Lab LLM 2025 Competition"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "datasets>=4.0.0",
  "huggingface-hub[cli]>=0.33.4",
  "jupyter>=1.1.1",
  "numpy==1.26.4",
  "openai>=1.90.0",
  "pandas>=2.3.1",
  "pydantic>=2.11.7",
  "python-dotenv>=1.1.1",
  "ray[data,default,serve,train,tune]>=2.47.1",
  "torch==2.6.0",
  "tensordict==0.9.1",
  "tqdm>=4.67.1",
  "trl>=0.19.1",
  "vllm==0.8.5.post1",
  "wandb>=0.21.0",
  "six>=1.17.0",
  "regex>=2024.11.6",
  "deepspeed>=0.17.2",
  "tensorboard>=2.20.0",
  "mpi4py>=4.1.0",
  "sentencepiece>=0.2.0",
  "nltk>=3.9.1",
  "ninja>=1.11.1.4",
  "packaging>=25.0",
  "wheel>=0.45.1",
  "transformers[hf-xet]>=4.53.3",
  "accelerate>=1.9.0",
  "safetensors>=0.5.3",
  "einops>=0.8.1",
  "peft>=0.16.0",
  "matplotlib>=3.10.3",
  "sortedcontainers>=2.4.0",
  "brotli>=1.1.0",
  "zstandard>=0.23.0",
  "cryptography>=45.0.5",
  "colorama>=0.4.6",
  "audioread>=3.0.1",
  "soupsieve>=2.7",
  "defusedxml>=0.7.1",
  "babel>=2.17.0",
  "codetiming>=1.4.0",
  "zarr>=3.1.0",
  "tensorstore>=0.1.74",
  "pybind11>=3.0.0",
  "scikit-learn>=1.7.1",
  "nest-asyncio>=1.6.0",
  "httpcore>=1.0.9",
  "pytest>=8.4.1",
  "pylatexenc>=2.10",
  "pyzmq==27.0",
  "ipython>=9.4.0",
  "protobuf>=4.25.8",
  "hf-transfer>=0.1.9",
  "pyarrow>=17.0.0",
  "nvidia-ml-py>=12.560.30",
  "fastapi[standard]>=0.115.0",
  "optree>=0.13.0",
  "grpcio>=1.62.1",
  "flashinfer-python==0.2.2.post1",
  "transformer-engine; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "megatron-core; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "torch-memory-saver>=0.0.8; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "flash-attn>=2.8.2; sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.setuptools]
packages = ["inference", "evaluation", "training", "data"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform != 'linux' or platform_machine == 'aarch64'" },
  { index = "pytorch-cu124", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
flashinfer-python = [
  { index = "flashinfer-python-cu124", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
transformer-engine = { git = "https://github.com/NVIDIA/TransformerEngine.git", rev = "v2.2.1", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" }
megatron-core = { git = "https://github.com/NVIDIA/Megatron-LM.git", rev = "core_v0.12.2", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" }


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "flashinfer-python-cu124"
url = "https://flashinfer.ai/whl/cu124/torch2.6"
explicit = true
